# surf_mcp

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
app/: __init__.py  server.py
app/application/services/: __init__.py  surf_analyzer.py
app/application/use_cases/: __init__.py  get_surf_conditions.py
app/prompts/: __init__.py  surf_interpretation.md
app/repository/: __init__.py  geocoding_repository.py  windy_repository.py
app/resources/: __init__.py  config.py  http_client.py
app/tools/: __init__.py  surf_tools.py
