[tool.poetry]
name = "surf-mcp"
version = "0.1.0"
description = "MCP Server for surf conditions using Windy Point Forecast API"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastmcp = ">=2.0.0"
httpx = ">=0.27.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
